yet more QRect right() fixes

QRect::right and topRight are off by one for historical reasons. This
caused incorrect default positioning when a (new) screen gets enabled
and automatically positioned.

To solve this entire source of problems let's stop using the faulty
API and instead calculate the offsets manually. More code but
no trap doors. The original code was written as though things were
not off by one anyway.

BUG: 455394


(cherry picked from commit fb0c1657b531225b0cf18b719eee4dee952d6bf1)